# sgp4-optimized

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  errors.rs  output.json  satellites.tle  tle.rs
.github/workflows/: rust.yml
src/: errors.rs  main.rs  sgp4.rs  tle.rs
