[package]
name = "sgp4-optimized-hzlmaminirinarh"
version = "0.0.1"
edition = "2021"
description = "Un propagateur SGP4 optimisé et parallélisé pour le calcul orbital de satellites"
license = "MIT"
repository = "https://github.com/HZLMaminirinaRH/sgp4-optimized"

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
